# librobotcontrol

./: CMakeLists.txt
cmake/: RobotControlConfig.cmake.in
examples/: rc_calibrate_accel.c  rc_calibrate_gyro.c  rc_calibrate_mag.c  rc_test_mpu.c
